--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "fs-extra": "^8.1.0",
     "helmet": "^3.21.2",
     "http-status-codes": "^1.4.0",
-    "lodash": "^4.17.15",
+    "lodash": ">=4.17.19",
     "module-alias": "^2.2.2",
     "multer": "^1.4.2"
   },
